--- a/public/slunch-web/src/app/app.component.html
+++ b/public/slunch-web/src/app/app.component.html
@@ -1,7 +1,1 @@
-<div>
-  <h1 style="text-align:center">
-    Welcome to {{ title }}!
-  </h1>
-  <app-poll></app-poll>
-
-</div>
+<router-outlet></router-outlet>
