--- a/public/slunch-web/src/app/poll/poll.component.html
+++ b/public/slunch-web/src/app/poll/poll.component.html
@@ -2,20 +2,19 @@
   <mat-card-title>{{poll.topic}} Poll</mat-card-title>
   <mat-card-content>
     <mat-grid-list cols="2" rowHeight="4:1">
-      <mat-grid-tile *ngFor="let option of poll.options" (click)="updateVote(option)">
+      <mat-grid-tile class="clickable" *ngFor="let option of poll.options" (click)="updateVote(option)">
         <app-poll-option [pollOption]="option"></app-poll-option>
       </mat-grid-tile>
     </mat-grid-list>
   </mat-card-content>
 </mat-card>
-
 <mat-accordion>
-  <mat-expansion-panel [expanded]="true">
+  <mat-expansion-panel [expanded]="false">
     <mat-expansion-panel-header>
       <mat-panel-title>
         Create new poll {{newPoll.topic}}
       </mat-panel-title>
-      <mat-panel-description>
+      <mat-panel-description *ngIf="newPoll.options.length">
           Choices:
           <span *ngFor="let option of newPoll.options">
              {{option.name}} &nbsp;
@@ -28,7 +27,7 @@
     </mat-form-field>
     <mat-form-field>
       <mat-select [ngModel]="newOption" (ngModelChange)="onOptionChange($event)" placeholder="choice">
-        <mat-option *ngFor="let op of pollOptions" [value]="op.name">{{op.name}}</mat-option>
+        <mat-option *ngFor="let op of pollOptions$ | async" [value]="op.name">{{op.name}}</mat-option>
       </mat-select>
     </mat-form-field>
   </div>
