--- a/public/slunch-web/src/app/poll-option/poll-option.component.html
+++ b/public/slunch-web/src/app/poll-option/poll-option.component.html
@@ -1,2 +1,19 @@
-<h3 matBadge="{{pollOption.votes.length}}" matBadgeOverlap="false">{{pollOption.name}}</h3>
-<div>Voters: {{pollOption.votes}}</div>
+<mat-grid-list cols="5" rowHeight="50px" style="position:static; margin:5px">
+  <mat-grid-tile colspan="4">
+    <h2>{{pollOption.name}}</h2>
+  </mat-grid-tile>
+  <mat-grid-tile colspan="1">
+    <h2>
+      {{pollOption.votes.length}}
+      <mat-icon [color]="myvote() ? 'primary' : ''">thumb_up</mat-icon>
+    </h2>
+  </mat-grid-tile>
+</mat-grid-list>
+<mat-grid-list cols="5" rowHeight="6:1" gutterSize="2px">
+  <mat-grid-tile>
+    <mat-icon color="primary" matTooltip="Voters" matTooltipPosition="after">group</mat-icon>
+  </mat-grid-tile>
+  <mat-grid-tile *ngFor="let voter of pollOption.votes">
+    <p>{{voter}}</p>
+  </mat-grid-tile>
+</mat-grid-list>
