added state for order

--- a/public/slunch-web/src/app/poll/poll.component.html
+++ b/public/slunch-web/src/app/poll/poll.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card style="margin:3em">
   <mat-card-title>{{poll.topic}} Poll</mat-card-title>
   <mat-card-content>
     <mat-grid-list cols="2" rowHeight="4:1">
