Reformatting, and starting order functionality

--- a/public/slunch-web/src/app/vote-page/vote-page.component.html
+++ b/public/slunch-web/src/app/vote-page/vote-page.component.html
@@ -1,24 +1,30 @@
 <mat-toolbar style="background-color:#d81e05" fullscreen>  
   <mat-grid-list style="width:100%" cols=20>
       <mat-grid-tile colspan=2>
-        <img width="70px" src="../../assets/scotia_icon.jpg">
+        <img width="70px" src="../../assets/scotia.jpg">
       </mat-grid-tile>
-      <mat-grid-tile colspan=17>
+      <mat-grid-tile colspan=8>
+        <h1 style="color: white; font-size: 40px"><strong>Slunch</strong> - {{username}}</h1>
+      </mat-grid-tile>
+      <mat-grid-tile colspan=8>
       </mat-grid-tile>
       <mat-grid-tile colspan=1>
-        <img class="clickable" matTooltip="Sign Out {{username}}" (click)="authService.logout()" src={{authService.userDetails.photoURL}} style="width: 50px">
+        <mat-icon class="clickable" style="color: white" (click)="authService.logout()" matTooltip="Sign Out">exit_to_app</mat-icon>
+      </mat-grid-tile>
+      <mat-grid-tile colspan=1>
+        <img matTooltip="{{username}}" src={{authService.userDetails.photoURL}} style="width: 50px">
       </mat-grid-tile>
     </mat-grid-list>
 </mat-toolbar>
 
 <mat-grid-list style="width:100%" cols=20>
   <mat-grid-tile colspan=3>
-    <mat-slide-toggle *ngIf="authService.isAdmin()" [(ngModel)]="newPollToggled">
+    <mat-slide-toggle *ngIf="authService.isAdmin" [(ngModel)]="newPollToggled">
       New Poll
     </mat-slide-toggle>
   </mat-grid-tile>
   <mat-grid-tile colspan=3>
-    <mat-slide-toggle *ngIf="authService.isAdmin()" [(ngModel)]="orderToggled" (change)="toggleOrders()">
+    <mat-slide-toggle *ngIf="authService.isAdmin" [(ngModel)]="orderToggled" (change)="toggleOrders()">
       Allow Orders
     </mat-slide-toggle>
   </mat-grid-tile>
