--- a/public/slunch-web/src/app/order/order.component.html
+++ b/public/slunch-web/src/app/order/order.component.html
@@ -1,15 +1,35 @@
 <mat-card style="margin:3em">
-  <mat-card-title>Place your order</mat-card-title>
-  <mat-card-content>
-    <mat-grid-list cols="5" rowHeight="200px">
-      <mat-grid-tile>
-      <mat-form-field>
-        <textarea matInput placeholder="Order instructions"></textarea>
-      </mat-form-field>
-      </mat-grid-tile>
-      <mat-grid-tile>
-      <button mat-raised-button color="primary">Send</button>
+
+  <div *ngIf="chosenOptions.length === 0">
+    <h1 style="color: #d81e05">Still undecided!</h1>
+  </div>
+  <div *ngIf="chosenOptions.length > 0">
+
+    <mat-card-title>Place your order</mat-card-title>
+
+    <mat-grid-list cols=5>
+      <mat-grid-tile *ngFor="let option of chosenOptions">
+        <div style="margin:1em">
+          <img style="max-height: 100%; max-width: 100%" src="{{option.iconUrl}}">
+        </div>
       </mat-grid-tile>
     </mat-grid-list>
-  </mat-card-content>
+  
+    <mat-card-content>
+      <mat-grid-list cols="5" rowHeight="200px">
+        <mat-grid-tile>
+        <mat-form-field>
+          <textarea matInput placeholder="Order instructions"></textarea>
+        </mat-form-field>
+        </mat-grid-tile>
+        <mat-grid-tile>
+        <button mat-raised-button color="primary">Send</button>
+        </mat-grid-tile>
+      </mat-grid-list>
+    </mat-card-content>
+
+  </div>
+
+
+
 </mat-card>
