--- a/public/slunch-web/src/app/poll-create/poll-create.component.html
+++ b/public/slunch-web/src/app/poll-create/poll-create.component.html
@@ -3,7 +3,7 @@
 
 <mat-card style="margin:3em">
   <mat-card-title>
-    Create new poll {{newPoll.topic}}
+    Create new poll
   </mat-card-title>
   <mat-grid-list cols=10 rowHeight="80px">
     <mat-grid-tile colspan=2>
@@ -14,7 +14,7 @@
     <mat-grid-tile colspan=2>
       <mat-form-field>
         <mat-select [(ngModel)]="newOption" (ngModelChange)="onOptionChange($event)" placeholder="Option">
-          <mat-option *ngFor="let op of pollOptions$ | async" [value]="op.name">{{op.name}}</mat-option>
+          <mat-option *ngFor="let op of pollOptions$ | async" [value]="op">{{op.name}}</mat-option>
         </mat-select>
       </mat-form-field>
     </mat-grid-tile>
