--- a/public/slunch-web/src/app/poll-option/poll-option.component.html
+++ b/public/slunch-web/src/app/poll-option/poll-option.component.html
@@ -1,19 +1,26 @@
-<mat-grid-list cols="5" rowHeight="50px" style="position:static; margin:5px">
-  <mat-grid-tile colspan="4">
-    <h2>{{pollOption.name}}</h2>
-  </mat-grid-tile>
-  <mat-grid-tile colspan="1">
+<mat-grid-list cols=5>
+  
+  <mat-grid-tile colspan=4></mat-grid-tile>
+  <mat-grid-tile colspan=1>
     <h2>
       {{pollOption.votes.length}}
       <mat-icon [color]="myvote() ? 'primary' : ''">thumb_up</mat-icon>
     </h2>
   </mat-grid-tile>
-</mat-grid-list>
-<mat-grid-list cols="5" rowHeight="6:1" gutterSize="2px">
-  <mat-grid-tile>
+
+  <mat-grid-tile colspan=1></mat-grid-tile>
+  <mat-grid-tile colspan=3>
+    <img style="max-height: 100%; max-width: 100%" src="{{pollOption.iconUrl}}">
+  </mat-grid-tile>
+  <mat-grid-tile colspan=1></mat-grid-tile>
+
+  <mat-grid-tile colspan=1>
     <mat-icon color="primary" matTooltip="Voters" matTooltipPosition="after">group</mat-icon>
   </mat-grid-tile>
-  <mat-grid-tile *ngFor="let voter of pollOption.votes">
-    <p>{{voter}}</p>
+  <mat-grid-tile>
+    <span *ngFor="let voter of pollOption.votes">
+        {{voter}}
+    </span>
   </mat-grid-tile>
+
 </mat-grid-list>
