--- a/public/slunch-web/src/styles.css
+++ b/public/slunch-web/src/styles.css
@@ -7,3 +7,13 @@ body {
 .clickable {
   cursor: pointer;
 }
+
+mat-grid-tile div {
+  width:100%;
+  height:100%;
+}
+
+mat-grid-tile div img {
+  max-width:100%;
+  max-height:100%;
+}
