--- a/public/slunch-web/src/app/header/header.component.html
+++ b/public/slunch-web/src/app/header/header.component.html
@@ -1,8 +1,7 @@
 <mat-grid-list style="width:100%; background-color:#d81e05" cols=20>
   <mat-grid-tile colspan=4 (click)="logoClick()" class="clickable" matTooltip="Home">
-      <img style="max-height: 90%" src="../../assets/scotia.png">
       <span style="color: white; font-size: 500%">
-        <strong>lunch</strong>
+        <strong>Slunch</strong>
       </span>
   </mat-grid-tile>
   <mat-grid-tile colspan=11></mat-grid-tile>
