--- a/public/slunch-web/src/app/poll-create/poll-create.component.html
+++ b/public/slunch-web/src/app/poll-create/poll-create.component.html
@@ -1,6 +1,6 @@
 <mat-card style="margin:3em">
   <mat-card-title>
-    Create new poll
+    <strong>Create new poll</strong>
   </mat-card-title>
   <mat-grid-list cols=8 rowHeight="80px">
     <mat-grid-tile colspan=2>
