--- a/public/slunch-web/src/app/poll/poll.component.html
+++ b/public/slunch-web/src/app/poll/poll.component.html
@@ -1,5 +1,5 @@
 
-<div style="margin:3em">
+<mat-card style="margin:3em">
   <mat-card-title><strong>{{poll.topic}} Poll</strong></mat-card-title>
   <mat-card-content>
     <mat-grid-list cols="2" rowHeight="2:1">
@@ -8,4 +8,4 @@
       </mat-grid-tile>
     </mat-grid-list>
   </mat-card-content>
-</div>
+</mat-card>
