--- a/public/slunch-web/src/app/poll-option/poll-option.component.html
+++ b/public/slunch-web/src/app/poll-option/poll-option.component.html
@@ -1,26 +1,32 @@
-<mat-grid-list cols=5>
+
   
-  <mat-grid-tile colspan=4></mat-grid-tile>
+  
+<mat-grid-list cols=8>
+  <mat-grid-tile colspan=7></mat-grid-tile>
   <mat-grid-tile colspan=1>
-    <h2>
-      {{pollOption.votes.length}}
+    <h2 style="position: absolute; top:10px; right:2em">
       <mat-icon [color]="myvote() ? 'primary' : ''">thumb_up</mat-icon>
+      <span style="position: absolute; top:0; left:30px">{{pollOption.votes.length}}</span>
     </h2>
   </mat-grid-tile>
+</mat-grid-list>
 
+<mat-grid-list cols=3>
   <mat-grid-tile colspan=1></mat-grid-tile>
-  <mat-grid-tile colspan=3>
+  <mat-grid-tile>
     <img style="max-height: 100%; max-width: 100%" src="{{pollOption.iconUrl}}">
   </mat-grid-tile>
-  <mat-grid-tile colspan=1></mat-grid-tile>
-
-  <mat-grid-tile colspan=1>
-    <mat-icon color="primary" matTooltip="Voters" matTooltipPosition="after">group</mat-icon>
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <span *ngFor="let voter of pollOption.votes">
-        {{voter}}
-    </span>
-  </mat-grid-tile>
-
 </mat-grid-list>
+
+<mat-grid-list cols=8>
+  <mat-grid-tile>
+    <h2 style="position: absolute; top:0; left: 1em">
+      <mat-icon color="primary" matTooltip="{{pollOption.votes.join(', ')}}" matTooltipPosition="after">group</mat-icon>
+    </h2>
+  </mat-grid-tile>
+</mat-grid-list>
+  
+
+
+
+
