Added a back button for unprocessed transactions

--- a/public/slunch-web/src/app/unprocessed/unprocessed.component.html
+++ b/public/slunch-web/src/app/unprocessed/unprocessed.component.html
@@ -28,6 +28,9 @@
             </mat-expansion-panel>
         </mat-accordion>
     </mat-card-content>
+
+    <button (click)="backClick()" mat-raised-button color="warn">Back</button>
+
 </div>
 
 
