--- a/public/slunch-web/src/app/unprocessed/unprocessed.component.html
+++ b/public/slunch-web/src/app/unprocessed/unprocessed.component.html
@@ -18,7 +18,7 @@
                 <mat-grid-list cols=10>
                     <mat-grid-tile colspan=2>
                         <mat-form-field>
-                            <input matInput placeholder="Price">
+                            <input matInput [(ngModel)]="price" placeholder="Price">
                         </mat-form-field>
                     </mat-grid-tile>
                     <mat-grid-tile>
