--- a/public/slunch-web/src/app/unprocessed/unprocessed.component.html
+++ b/public/slunch-web/src/app/unprocessed/unprocessed.component.html
@@ -3,28 +3,35 @@
     <mat-card-content>
         <mat-accordion>
             <mat-expansion-panel *ngFor="let t of unprocessedTransactions">
-                <mat-expansion-panel-header>
-                    <mat-panel-title>
-                        <span>
-                            {{t.firstname}} {{t.lastname}} - {{t.restaurant}}
-                        </span>
-                    </mat-panel-title>
-                    <mat-panel-description>
-                        <span>
-                            {{t.order}}
-                        </span>
-                    </mat-panel-description>
-                </mat-expansion-panel-header>
-                <mat-grid-list cols=10>
-                    <mat-grid-tile colspan=2>
-                        <mat-form-field>
-                            <input matInput [(ngModel)]="price" placeholder="Price">
-                        </mat-form-field>
-                    </mat-grid-tile>
-                    <mat-grid-tile>
-                        <button mat-raised-button color="warn" (click)="confirmClick(t)">Confirm</button>
-                    </mat-grid-tile>
-                </mat-grid-list>
+                    <mat-expansion-panel-header>
+                            <mat-panel-title>
+                                <span *ngIf="t.price == 0">
+                                    {{t.firstname}} {{t.lastname}} - {{t.restaurant}}
+                                </span>
+                                <span *ngIf="t.price != 0">
+                                    {{t.firstname}} {{t.lastname}} - Deposit
+                                </span>
+                            </mat-panel-title>
+                            <mat-panel-description>
+                                <span *ngIf="t.price == 0">
+                                    {{t.order}}
+                                </span>
+                                <span *ngIf="t.price != 0">
+                                    {{t.price}}
+                                </span>
+                            </mat-panel-description>
+                        </mat-expansion-panel-header>
+                        <mat-grid-list cols=10>
+                            <mat-grid-tile colspan=2>
+                                <mat-form-field>
+                                    <input matInput [(ngModel)]="t.price" placeholder="Price">
+                                </mat-form-field>
+                            </mat-grid-tile>
+                            <mat-grid-tile>
+                                <button mat-raised-button color="warn" (click)="confirmPurchase(t)">Confirm</button>
+                            </mat-grid-tile>
+                        </mat-grid-list>
+                
             </mat-expansion-panel>
         </mat-accordion>
     </mat-card-content>
