Formatting, order status, etc.

--- a/public/slunch-web/src/app/header/header.component.html
+++ b/public/slunch-web/src/app/header/header.component.html
@@ -2,11 +2,18 @@
   <mat-grid-tile colspan=4 (click)="logoClick()" class="clickable" matTooltip="Home">
     <strong style="color: white; position: relative; font-size:55px">Slunch</strong>
   </mat-grid-tile>
-  <mat-grid-tile colspan=5>
+  <mat-grid-tile colspan=2>
     <button mat-raised-button color="warn" (click)="router.navigate(['vote'])">Vote/Order</button>
+  </mat-grid-tile>
+  <mat-grid-tile colspan=2>
     <button mat-raised-button color="warn" (click)="router.navigate(['account'])">Account</button>
   </mat-grid-tile>
-  <mat-grid-tile colspan=7></mat-grid-tile>
+  <mat-grid-tile colspan=5></mat-grid-tile>
+  <mat-grid-tile colspan=4>
+    <button *ngIf="authService.isAdmin" mat-raised-button color="warn" [matBadge]="numUnprocessed" matBadgePosition="after" [matBadgeColor]="numUnprocessed == 0 ? 'primary':'accent'" (click)="router.navigate(['unprocessed'])">
+      Unprocessed Transactions
+    </button>
+  </mat-grid-tile>
   <mat-grid-tile>
     <img *ngIf="authService.isLoggedIn()" matTooltip="{{username}}" src={{authService.userDetails.photoURL}} style="height:50px; width:50px; border-radius: 50%">
   </mat-grid-tile>
@@ -16,31 +23,28 @@
 </mat-grid-list>
 
 <mat-accordion *ngIf="authService.isAdmin">
-  <mat-expansion-panel>
+  <mat-expansion-panel style="margin-left: 3em; margin-right: 3em;">
     
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        <strong>Admin Controls</strong>
-      </mat-panel-title>
-    </mat-expansion-panel-header>
-
-    <mat-list>
-      <mat-list-item>
-        <button mat-raised-button color="warn" (click)="viewUnprocessedTransactions()">
-          Unprocessed Transactions
-        </button>
-      </mat-list-item>
-      <mat-list-item>
-        <mat-slide-toggle [(ngModel)]="stateService.newPollToggled">
-          New Poll
-        </mat-slide-toggle>
-      </mat-list-item>
-      <mat-list-item>
-        <mat-slide-toggle [(ngModel)]="stateService.isOrdering" (change)="toggleOrders()">
-          Allow Orders
-        </mat-slide-toggle>
-      </mat-list-item>
-    </mat-list>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Admin Controls
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+    
+        <mat-list>
+          <mat-list-item>
+            <mat-slide-toggle [(ngModel)]="stateService.isOrdering" (change)="toggleOrders()">
+              Allow Orders
+            </mat-slide-toggle>
+          </mat-list-item>
+          <mat-list-item>
+            <mat-slide-toggle [(ngModel)]="stateService.newPollToggled">
+              New Poll
+            </mat-slide-toggle>
+          </mat-list-item>
+        </mat-list>
+    
+    
 
   </mat-expansion-panel>
 </mat-accordion>
