--- a/public/slunch-web/src/app/account/account.component.html
+++ b/public/slunch-web/src/app/account/account.component.html
@@ -1,79 +1,93 @@
-
-
-
 <mat-card style="margin: 3em">
   <mat-card-title>
     Balance
   </mat-card-title>
   <mat-card-content>
     <h2 [ngClass]="account?.balance > 20 ? 'green':'red'">
-      ${{account?.balance}}
+      {{account?.balance | currency}}
     </h2>
 
 
     <mat-accordion>
-        <mat-expansion-panel style="width:50%; align-content: left;">
-            <mat-expansion-panel-header>
-              <mat-panel-title>
-                Add money
-              </mat-panel-title>
-            </mat-expansion-panel-header>
-            <mat-grid-list rowHeight="3:1" cols=2>
-              <mat-grid-tile>
-                <mat-form-field>
-                  <input matInput [(ngModel)]="addAmount" placeholder="Amount">
-                </mat-form-field>
-              </mat-grid-tile>
-              <mat-grid-tile>
-                <button mat-raised-button color="warn" (click)="addMoney()">Confirm</button>
-              </mat-grid-tile>
-            </mat-grid-list>
-        </mat-expansion-panel>
+      <mat-expansion-panel style="width:50%; align-content: left;">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Add money
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <mat-grid-list rowHeight="3:1" cols=2>
+          <mat-grid-tile>
+            <mat-form-field>
+              <input matInput [(ngModel)]="addAmount" placeholder="Amount">
+            </mat-form-field>
+          </mat-grid-tile>
+          <mat-grid-tile>
+            <button mat-raised-button color="warn" (click)="addMoney()">Confirm</button>
+          </mat-grid-tile>
+        </mat-grid-list>
+      </mat-expansion-panel>
     </mat-accordion>
 
   </mat-card-content>
 
   <mat-divider></mat-divider>
-  <br><br>
+  <br>
+  <br>
 
   <mat-card-title>
     Transactions
   </mat-card-title>
   <mat-card-content>
-    
-    <mat-table [dataSource]="orders" matSort>
+
+    <mat-table [dataSource]="transactions" matSort>
       <ng-container matColumnDef="time">
         <mat-header-cell *matHeaderCellDef mat-sort-header>Time</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{row?.time}}</mat-cell>
+        <mat-cell *matCellDef="let o">{{o?.time | date: 'short'}}</mat-cell>
       </ng-container>
-      
-      <ng-container matColumnDef="restaurant">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>Restaurant</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{row?.restaurant}}</mat-cell>
+
+      <ng-container matColumnDef="description">
+        <mat-header-cell *matHeaderCellDef>Description</mat-header-cell>
+        <mat-cell *matCellDef="let o">{{o?.description}}</mat-cell>
       </ng-container>
-    
-      <ng-container matColumnDef="order">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>Order</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{row?.order}}</mat-cell>
+
+      <ng-container matColumnDef="detail">
+        <mat-header-cell *matHeaderCellDef>Detail</mat-header-cell>
+        <mat-cell *matCellDef="let o">{{o?.detail}}</mat-cell>
       </ng-container>
-    
-      <ng-container matColumnDef="price">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>Price</mat-header-cell>
-        <mat-cell *matCellDef="let row" [ngClass]="row.price < 0 ? 'green' : 'red'">{{row?.price}}</mat-cell>
+
+      <ng-container matColumnDef="credit">
+        <mat-header-cell *matHeaderCellDef>Credit</mat-header-cell>
+        <mat-cell *matCellDef="let o">
+          <span style="color: red" *ngIf="o.price >= 0">
+            {{o.price}}
+          </span>
+        </mat-cell>
       </ng-container>
-    
-      <ng-container matColumnDef="processed">
-        <mat-header-cell *matHeaderCellDef>Processed</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{row?.processed}}</mat-cell>
+
+      <ng-container matColumnDef="debit">
+        <mat-header-cell *matHeaderCellDef>Debit</mat-header-cell>
+        <mat-cell *matCellDef="let o">
+          <span style="color: green" *ngIf="o.price < 0">
+            {{-1*o.price}}
+          </span>
+        </mat-cell>
       </ng-container>
-    
+
+      <ng-container matColumnDef="status">
+        <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
+        <mat-cell *matCellDef="let o">
+          <mat-icon matTooltip="Complete" *ngIf="o.status == 'done'" style="color: green">done_all</mat-icon>
+          <mat-icon matTooltip="Received" *ngIf="o.status == 'ack'" style="color: blue">done</mat-icon>
+          <mat-icon matTooltip="Pending" *ngIf="o.status == 'new'" style="color: red">warning</mat-icon>
+        </mat-cell>
+      </ng-container>
+
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-    
+
     </mat-table>
+    <mat-paginator [pageSizeOptions]="[10, 20, 50]"></mat-paginator>
   </mat-card-content>
 
-  
+
 </mat-card>
-
-
