--- a/public/slunch-web/src/app/poll/poll.component.html
+++ b/public/slunch-web/src/app/poll/poll.component.html
@@ -1,6 +1,6 @@
 
 <mat-card style="margin:3em">
-  <mat-card-title><strong>{{poll.topic}} Poll</strong></mat-card-title>
+  <mat-card-title>{{poll.topic}} Poll</mat-card-title>
   <mat-card-content>
     <mat-grid-list cols="2" rowHeight="2:1">
       <mat-grid-tile class="clickable" style="border-style: solid; border-width: 1px;"  *ngFor="let option of poll.options" (click)="updateVote(option)">
