--- a/public/slunch-web/src/app/unprocessed/unprocessed.component.html
+++ b/public/slunch-web/src/app/unprocessed/unprocessed.component.html
@@ -1,43 +1,68 @@
-<div style="margin:3em">
-    <mat-card-title><strong>Unprocessed Transactions</strong></mat-card-title>
+<mat-card style="margin:3em">
+    <mat-card-title>
+        Unprocessed Transactions
+    </mat-card-title>
     <mat-card-content>
-        <mat-accordion>
-            <mat-expansion-panel *ngFor="let t of unprocessedTransactions">
-                    <mat-expansion-panel-header>
-                            <mat-panel-title>
-                                <span *ngIf="t.price == 0">
-                                    {{t.firstname}} {{t.lastname}} - {{t.restaurant}}
-                                </span>
-                                <span *ngIf="t.price != 0">
-                                    {{t.firstname}} {{t.lastname}} - Deposit
-                                </span>
-                            </mat-panel-title>
-                            <mat-panel-description>
-                                <span *ngIf="t.price == 0">
-                                    {{t.order}}
-                                </span>
-                                <span *ngIf="t.price != 0">
-                                    {{t.price}}
-                                </span>
-                            </mat-panel-description>
-                        </mat-expansion-panel-header>
-                        <mat-grid-list cols=10>
-                            <mat-grid-tile colspan=2>
-                                <mat-form-field>
-                                    <input matInput [(ngModel)]="t.price" placeholder="Price">
-                                </mat-form-field>
-                            </mat-grid-tile>
-                            <mat-grid-tile>
-                                <button mat-raised-button color="warn" (click)="confirmPurchase(t)">Confirm</button>
-                            </mat-grid-tile>
-                        </mat-grid-list>
-                
-            </mat-expansion-panel>
-        </mat-accordion>
+
+        <mat-table [dataSource]="unprocessedTransactions" matSort matSortDirection="desc">
+            <ng-container matColumnDef="time">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>Time</mat-header-cell>
+                <mat-cell *matCellDef="let o">{{o?.time | date: 'short'}}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="name">
+                <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
+                <mat-cell *matCellDef="let o">{{o?.firstname}} {{o?.lastname}}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="description">
+                <mat-header-cell *matHeaderCellDef>Description</mat-header-cell>
+                <mat-cell *matCellDef="let o">{{o?.description}}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="detail">
+                <mat-header-cell *matHeaderCellDef>Detail</mat-header-cell>
+                <mat-cell *matCellDef="let o">{{o?.detail}}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="price">
+                <mat-header-cell *matHeaderCellDef>Price</mat-header-cell>
+                <mat-cell *matCellDef="let o">
+                    <input style="width: 30%" [(ngModel)]="o.price">
+                </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="status">
+                <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
+                <mat-cell *matCellDef="let o">
+                    <mat-icon matTooltip="Complete" *ngIf="o.status == 'done'" style="color: green">done_all</mat-icon>
+                    <mat-icon matTooltip="Received" *ngIf="o.status == 'ack'" style="color: blue">done</mat-icon>
+                    <mat-icon matTooltip="Pending" *ngIf="o.status == 'new'" style="color: red">warning</mat-icon>
+                </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="acknowledge">
+                <mat-header-cell *matHeaderCellDef>Acknowledge</mat-header-cell>
+                <mat-cell *matCellDef="let o">
+                    <button mat-raised-button color="primary" (click)="acknowledgeTransaction(o)">Ack</button>
+                </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="confirm">
+                <mat-header-cell *matHeaderCellDef>Confirm</mat-header-cell>
+                <mat-cell *matCellDef="let o">
+                    <button mat-raised-button color="warn" (click)="confirmTransaction(o)">Confirm</button>
+                </mat-cell>
+            </ng-container>
+
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+
+        </mat-table>
+        <mat-paginator [pageSizeOptions]="[10, 20, 50]"></mat-paginator>
+
     </mat-card-content>
 
     <button (click)="backClick()" mat-raised-button color="warn">Back</button>
 
-</div>
-
-
+</mat-card>
