Hiding the admin control when logged out

--- a/public/slunch-web/src/app/header/header.component.html
+++ b/public/slunch-web/src/app/header/header.component.html
@@ -22,7 +22,7 @@
   </mat-grid-tile>
 </mat-grid-list>
 
-<mat-accordion *ngIf="authService.isAdmin">
+<mat-accordion *ngIf="authService.isAdmin && authService.isLoggedIn()">
   <mat-expansion-panel style="margin-left: 3em; margin-right: 3em;">
     
         <mat-expansion-panel-header>
