Showing the name of the admin that recieved/completed the transaction

--- a/public/slunch-web/src/app/unprocessed/unprocessed.component.html
+++ b/public/slunch-web/src/app/unprocessed/unprocessed.component.html
@@ -36,9 +36,9 @@
             <ng-container matColumnDef="status">
                 <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
                 <mat-cell *matCellDef="let o">
-                    <mat-icon matTooltip="Complete" *ngIf="o.status == 'done'" style="color: green">done_all</mat-icon>
-                    <mat-icon matTooltip="Received" *ngIf="o.status == 'ack'" style="color: blue">done</mat-icon>
-                    <mat-icon matTooltip="Pending" *ngIf="o.status == 'new'" style="color: red">warning</mat-icon>
+                    <mat-icon class="clickable" matTooltip="Complete: {{o?.ackedBy}}" *ngIf="o.status == 'done'" style="color: green">done_all</mat-icon>
+                    <mat-icon class="clickable" matTooltip="Received: {{o?.ackedBy}}" *ngIf="o.status == 'ack'" style="color: blue">done</mat-icon>
+                    <mat-icon class="clickable" matTooltip="Pending" *ngIf="o.status == 'new'" style="color: red">warning</mat-icon>
                 </mat-cell>
             </ng-container>
 
