Enabled unsubscribing from all database subscriptions

--- a/public/slunch-web/src/app/login-page/login-page.component.html
+++ b/public/slunch-web/src/app/login-page/login-page.component.html
@@ -1,4 +1,5 @@
 
+<app-header-plain></app-header-plain>
 <div class="wrapper">
   <mat-card class="login-card">
     <div class="login-button-area">
