--- a/public/slunch-web/src/app/header/header.component.html
+++ b/public/slunch-web/src/app/header/header.component.html
@@ -7,7 +7,7 @@
     <img *ngIf="authService.isLoggedIn() && authService.userDetails.photoURL" matTooltip="{{username}}" src={{authService.userDetails.photoURL}} style="height:50px; width:50px; border-radius: 50%">
   </mat-grid-tile>
   <mat-grid-tile>
-    <mat-icon *ngIf="authService.isLoggedIn()" class="clickable" style="color: white; font-size:200%" (click)="authService.logout()"
+    <mat-icon *ngIf="authService.isLoggedIn()" class="clickable" style="color: white; font-size:200%" (click)="logout()"
       matTooltip="Sign Out">exit_to_app</mat-icon>
   </mat-grid-tile>
 </mat-grid-list>
