--- a/public/slunch-web/src/app/poll-create/poll-create.component.html
+++ b/public/slunch-web/src/app/poll-create/poll-create.component.html
@@ -11,7 +11,7 @@
     <mat-grid-tile colspan=2>
       <mat-form-field>
         <mat-select [(ngModel)]="newOption" (ngModelChange)="onOptionChange($event)" placeholder="Option">
-          <mat-option *ngFor="let op of pollOptions$ | async" [value]="op">{{op.name}}</mat-option>
+          <mat-option *ngFor="let op of pollService.pollOptions$ | async" [value]="op">{{op.name}}</mat-option>
         </mat-select>
       </mat-form-field>
     </mat-grid-tile>
