--- a/public/slunch-web/src/app/unprocessed/unprocessed.component.html
+++ b/public/slunch-web/src/app/unprocessed/unprocessed.component.html
@@ -6,15 +6,15 @@
     </mat-card-title>
 
     <mat-card-content>
-        <mat-table [dataSource]="unprocessedTransactions" matSort matSortDirection="desc">
+        <mat-table [dataSource]="transactionService.unprocessedTransactionsDS">
             <ng-container matColumnDef="time">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>Time</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef>Time</mat-header-cell>
                 <mat-cell *matCellDef="let o">{{o?.time | date: 'short'}}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="name">
                 <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
-                <mat-cell *matCellDef="let o">{{o?.firstname}} {{o?.lastname}}</mat-cell>
+                <mat-cell *matCellDef="let o">{{o?.displayName}}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="description">
@@ -37,7 +37,7 @@
             <ng-container matColumnDef="status">
                 <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
                 <mat-cell *matCellDef="let o">
-                    <mat-icon class="clickable" matTooltip="Complete: {{o?.ackedBy}}" *ngIf="o.status == 'done'" style="color: green">done_all</mat-icon>
+                    <mat-icon class="clickable" matTooltip="Complete: {{o?.completedBy}}" *ngIf="o.status == 'done'" style="color: green">done_all</mat-icon>
                     <mat-icon class="clickable" matTooltip="Received: {{o?.ackedBy}}" *ngIf="o.status == 'ack'" style="color: blue">done</mat-icon>
                     <mat-icon class="clickable" matTooltip="Pending" *ngIf="o.status == 'new'" style="color: red">warning</mat-icon>
                 </mat-cell>
